@@ -1,3 +1,6 @@
 * 13/12/12 Creation of OALab
 * 05/04/13 Rename OALab into VPLab
 * 10/09/13 Rename VPLab into OALab
+* 15/09/13 Add Logger
+* 16/09/13 Add Help
+* 16/09/13 Embed alea_install_gui in OALab. Rename it in "Store".
